// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CatalyticActivityView component should render catalytic activity 1`] = `
<DocumentFragment>
  <h3
    class="capitalize"
  >
    Catalytic activity
  </h3>
  <span
    class="text-block"
  >
    Reaction name
    <div>
      This reaction proceeds in the 
      <span
        data-testid="direction-text"
      >
        forward
      </span>
       and the 
      <span
        data-testid="direction-text"
      >
        backward
      </span>
       directions.
    </div>
    <div>
      EC:EC:12112 (
      <a
        href="/uniprotkb?query=ec:EC:12112"
      >
        UniProtKB
      </a>
       | 
      <a
        class="external-link"
        href="https://enzyme.expasy.org/EC/EC:12112"
        rel="noopener"
        target="_blank"
      >
        ENZYME
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
       | 
      <a
        class="external-link"
        href="https://www.rhea-db.org/rhea?query=ec:EC:12112"
        rel="noopener"
        target="_blank"
      >
        Rhea
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
      )
    </div>
  </span>
</DocumentFragment>
`;

exports[`CatalyticActivityView component should render catalytic activity when comment does not have reactionCrossReferences 1`] = `
<DocumentFragment>
  <span
    class="text-block"
  >
    Reaction name
    <div>
      This reaction proceeds in the 
      <span
        data-testid="direction-text"
      >
        forward
      </span>
       and the 
      <span
        data-testid="direction-text"
      >
        backward
      </span>
       directions.
    </div>
    <div>
      EC:EC:12112 (
      <a
        href="/uniprotkb?query=ec:EC:12112"
      >
        UniProtKB
      </a>
       | 
      <a
        class="external-link"
        href="https://enzyme.expasy.org/EC/EC:12112"
        rel="noopener"
        target="_blank"
      >
        ENZYME
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
       | 
      <a
        class="external-link"
        href="https://www.rhea-db.org/rhea?query=ec:EC:12112"
        rel="noopener"
        target="_blank"
      >
        Rhea
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
      )
    </div>
  </span>
</DocumentFragment>
`;

exports[`ReactionDirection component should render ReactionDirection when one physiologicalReactions is present 1`] = `
<DocumentFragment>
  <div>
    This reaction proceeds in the 
    <span
      data-testid="direction-text"
    >
      forward
    </span>
     direction.
  </div>
</DocumentFragment>
`;

exports[`ReactionDirection component should render ReactionDirection when two physiologicalReactions are present and should be in correct order (forwards then backwards) 1`] = `
<DocumentFragment>
  <div>
    This reaction proceeds in the 
    <span
      data-testid="direction-text"
    >
      forward
    </span>
     and the 
    <span
      data-testid="direction-text"
    >
      backward
    </span>
     directions.
  </div>
</DocumentFragment>
`;

exports[`RheaReactionVisualizer component should render RheaReactionVisualizer 1`] = `
<DocumentFragment>
  <div
    class="rhea-reaction-visualizer__toggle"
  >
    <test-file-stub
      width="1ch"
    />
    <button
      class="button tertiary"
      type="button"
    >
      View Rhea reaction
    </button>
  </div>
</DocumentFragment>
`;

exports[`ZoomModalContent component should render 1`] = `
<DocumentFragment>
  <div
    class="zoom-image-container"
  >
    <img
      alt="chebi:12345"
      style="display: none;"
    />
    <div
      class="loader-container"
    >
      <test-file-stub
        classname="loader"
        height="100"
        width="100"
      />
    </div>
  </div>
</DocumentFragment>
`;
